# Analysis-and-Design-of-Algorithms

./: .gitignore  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  run.sh  vercel.json
.agents/memory/: MEMORY.md  ada-hub-site.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: beginner_issue.md
.github/workflows/: build.yml
ADA Programs/: Dijkstras_Algorithm.c  Dis_knapsack.c  Floyd_Algorithm.c  Kruskal_Algorithm  Kruskal_Algorithm.c  Merge.c  Nqueen.c  Prims_Algorithm.c  Quick.c  Topological.c  Warshal_Algorithm.c  kruskal  kruskal.c  o_1knapsack.c  selection.c  set.c
ADA Programs/tests/: CMakeLists.txt  kruskal_test.cpp
ada-hub/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
ada-hub/public/: robots.txt
ada-hub/src/components/: AlgorithmCard.astro  Breadcrumb.astro  CategoryCard.astro  Footer.astro  GitHubStats.astro  Header.astro
ada-hub/src/content/: config.ts
ada-hub/src/content/blog/: ada-lab-exam-guide.mdx  backtracking-guide.mdx  big-o-notation.mdx  divide-and-conquer.mdx  dynamic-programming-tutorial.mdx  greedy-algorithms-guide.mdx  what-is-ada.mdx
ada-hub/src/data/: algorithms.ts
ada-hub/src/layouts/: BaseLayout.astro
ada-hub/src/pages/: about.astro  index.astro  rss.xml.ts
ada-hub/src/pages/algorithms/: [slug].astro  index.astro
ada-hub/src/pages/blog/: [slug].astro  index.astro
ada-hub/src/pages/categories/: [category].astro  index.astro
ada-hub/src/styles/: global.css
attached_assets/: Pasted-You-are-a-senior-staff-engineer-SEO-architect-technical_1782196745939.txt
